# FastSim-HL-LHC

./: .gitignore  README.md  build_exe.bat  launcher.pyw  pyproject.toml  run.bat  run.sh
.github/workflows/: ci.yml
assets/: generate_icon.py
src/fastsim_tt4a/: __init__.py  __main__.py  analysis.py  benchmark.py  dashboard.py  data.py  evaluate.py  metrics.py  model.py  submission.py  train.py  validate.py
tests/: test_analysis.py  test_data.py  test_evaluate.py  test_metrics.py  test_model.py  test_submission.py  test_train.py
